implemented threadpoolexecutor and ROOM persistence
Signed-off-by: Roman Smirnov <roman.smirnv@gmail.com>

--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.didactapp.android.cloudlibrary.ui.BooksActivity">
+    tools:context="com.didactapp.android.cloudlibrary.activities.BooksActivity">
 
-    <com.didactapp.android.cloudlibrary.ui.BooksView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <!--<com.didactapp.android.cloudlibrary.BooksView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
 
 </FrameLayout>
